add moon to rocket game

--- a/rocketlauncher/rocketlauncher.html
+++ b/rocketlauncher/rocketlauncher.html
@@ -8,6 +8,7 @@
 <canvas id="myCanvas" width="200" height="800" style="border:1px solid #000000;margin: 0px;padding:0px;">
 </canvas>
 
+<script src="./js/drawings.js"></script>
 <script src="./js/rocketlauncher.js"></script>
 </body>
 </html>
